align  responses of GET /user/{user_ulid}/keys and GET /users/keys
